# bootstrap

./: .gitignore  ABOUT  LICENSE  README.md  TODO.md  install.ps1  install.sh  pyproject.toml
LaTeX/: LaTeX.md  chocolatey.ps1
ai/: claude-code-anthropic.md  gemma4-google.md  ollama.md
ai/frameworks/: gguf.md  llama-cli-bugs.md  llama-cli-demo-ex-4000m-blackwell-pro.md  llama-cli-demo-ex-5090.md  llama-cli-demo.ps1  llama-cli-func-ex.ps1  llama-cli-func-ex.psm1  llama-cpp.md
ai/models/: PrismML.md  cohere.md
ai/products/: prism-ml.md  unsloth.md
ai/prompt-engineering/: proofread.md  question-answer.md
algorithms/: leading-zeros.py
apps/: copy-items-validate.ps1  validate-items.ps1
chriscarl/: FEATURES.md
clouds/gcp/: free-vm.sh  google-cloud-add-ssh-key.ps1  google-cloud-console.md  google-free-vm.sh
communications/: condolences.md  recruiter-decline.md
devices/: cuda.md
devices/sonnet-tech/: breakaway-box-850T5-troubleshooting.md
docker/: docker-overview.sh
docs/: sample-placeholder-assets.md
files/: pfx-change-password.ps1
files/templates/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
git/: pre-commit
jupyter/: ipynb-exported-working.py  ipynb-magics.txt  ipynb-old-with-pip-install-notes.html  ipynb.html  ipynb.ipynb  ipynb.py  start.ps1  stop.ps1  to-formats.ps1
jupyter/.ipynb_checkpoints/: config-settings-checkpoint.py
languages/all/: splat-splay.md
languages/asm/: masm.asm  masm.md
languages/bash/: bash.sh  pipe-redirection.sh  script-filepath.sh
languages/batch/: argparse.cmd  batch-string-interpolation.cmd  current-dirpath-script-filepath.cmd  echo-pipeline-stderr.cmd  multiline-comment.cmd  powershell-batch.ps1  script-filepath.cmd  self-elevation.cmd
languages/c/: getopt.c  getopt.py  structs.c
languages/c++/: class-main.cpp  class.cpp  class.h  g++.sh  list-comprehension.cpp  timing.cpp
languages/powershell/: copy-items-validate.ps1  curl-invoke-webreqeuest.ps1  debug-error-handling.ps1  download-file.ps1  filtering.ps1  hash-tables.ps1  inspect.ps1  invoke-string.ps1  lists-arrays.ps1  pipe-redirection.ps1  readline-transcript-history.ps1  start-process.ps1  strings.ps1  typing.ps1
languages/python/: argument-parsing.py  data-model.py  download-file-requests.py  download-file.py  hash.py  image-metadata.py  install-python-path.ps1  install-requirements.ps1  interactive-demo.py  new-project.md  python.isazip  python.md  regex.py  requirements-media.txt  requirements.txt  unzip-file.py  url-unquote-percent.py
markdown/: markdown.md
operating-systems/: terminal-sizes.py
operating-systems/docker/: compose.yaml  docker-compose-windows.yaml  docker-compose.md  docker-linx.md  docker-overview.sh  docker-windows.ps1  fix-docker-issues-reinstall.ps1
operating-systems/linux/: grub-rescue-multiple-partitions.sh
operating-systems/posix/: background.sh  batch-signals.sh  file.sh  fork-hard.c  fork.c  man.sh  orphan.c  processes.sh  ps-aux.sh  self-pipe.c  sigaction.c  signal.c  signal.sh  swapfile.sh  ubuntu-on-new-pc.sh  wsl.sh  zombie.c
operating-systems/virtualbox/: virtualbox.md
operating-systems/vmware/: boot-from-hard-disk.md
operating-systems/windows/: admin-self-elevate.ps1  battery.ps1  disable-hibernation.ps1  dotnet.md  environment-registry.ps1  events.ps1  functions-commandlets.ps1  malware-antivirus.ps1  mspaint-start-launch.ps1  mspaint.ps1  performance-kill-apps.bat  performance-kill-apps.ps1  progress-bar.ps1  registry.ps1  special-folders.ps1  sync-time.ps1  version.ps1  web-downloaded-unblock-file.ps1
operating-systems/wsl/: .wslconfig  wsl-cp-ssh-from-windows.sh  wsl-install.sh  wsl-notes.md
powershell/: archive-tar-zip.ps1  download-file.ps1  object-inspect.ps1
python/: archive-7z.py  archive-everything.py  date-time-zone-calendar.py  diff.py  disables.md  get-console-size.py  new-project.md  poetry.md  regex.py  typing-internals.py
python/package-managers/: anaconda.md  poetry.md
python/pickling/: lib.py  load-bad.py  load-good.py  save-bad.py
scripts/: gcp-add-ssh-key.bat  gcp-login.bat  gcp-login.ps1  git-all.ps1  project.bat  project.ps1  project.py
shells/cmd/: pipeline.cmd
snippets/LaTeX/: LaTeX.md
sql/: connection-monitor.sql
text/LaTeX/: LaTeX-not-md.tex  LaTeX-stolen.md  LaTeX.md  LaTeX.tex  chocolatey.ps1  compile.ps1  ieee-conference-template-compiles.tex  ieee-conference-template.tex
text/html/: openai-gpt-thinking-html  xpath.html
text/markdown/: markdown.md
text/pdf/: wkhtmltopdf.ps1
tools/: git.sh  github.md
tools/adobe/: acrobat-preferences.md
tools/hacks/: base64decode.py
tools/jmp/: jmp.md
tools/magick/: magick-bw+pdf.ps1  magick-clean-notes+pdf.ps1  magick-gif-to-frames.ps1  magick-pdf-to-png.ps1  magick.md
tools/make/: main.cpp  makefile
web/: google-search.md
web/flask/: error-handling.py  status-codes.py
web/selenium/: selenium-headless.py
windows/: crystaldiskinfo.ps1  firewall-disable.ps1  registry.ps1  smart.ps1
(+75 files in other folders)
