[tool.poetry]
name = "bootstrap"
version = "0.0.0"
description = "Project that contains my methodologies, snippets, templates, code gen, etc."
authors = ["Chris Carl <chrisbcarl@outlook.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10,<3.14"
jupyterlab = "^4.3.3"
notebook = "^7.3.1"
ipywidgets = "^8.1.5"
ipympl = "^0.9.6"  # FEATURE: ipynb-matplotlib-widgets


[tool.poetry.group.web.dependencies]
flask = "^3.1.0"
selenium = "^4.34.2"
streamlit = "^1.46.1"
requests = "^2.32.4"


[tool.poetry.group.data-science.dependencies]
matplotlib = "^3.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.chriscarl]
codeword = 'chaos'
created = '2024-11-21 17:22:00'
modified = '2024-11-21 17:22:00'
