[project]
name = "bootstrap"
version = "0.0.0"
description = "Project that contains my methodologies, snippets, templates, code gen, etc."
authors = [{name = "Chris Carl", email = "chrisbcarl@outlook.com"}]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.12,<3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.chriscarl]
codeword = 'chaos'
created = '2024-11-21 17:22:00'
modified = '2024-11-21 17:22:00'


[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__"
]
ignore = ["ignoreme"]
stubPath = "dist/stubs"
# defineConstant = { DEBUG = true }
reportAttributeAccessIssue = false  # ._MEIPASS


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    # https://docs.pytest.org/en/latest/explanation/goodpractices.html#test-discovery
    # https://docs.pytest.org/en/latest/explanation/goodpractices.html#which-import-mode
    # allows you to have 2 test file names that are exaclty the same like a/test_lib.py and b/test_lib.py
    "--import-mode=importlib",
]


[[tool.mypy.overrides]]
module = [
    'parameterized',
]
ignore_missing_imports = true


[tool.poetry]
package-mode = false
packages = [
    # https://python-poetry.org/docs/pyproject/#packages
    {include = "chriscarl", from = "src"}
]
include = [
    { path = "tests", format = "sdist" },
    # it seems to include all files that are in the packages include section without the need to specify
]
repository = "https://github.com/chrisbcarl/bootstrap"


[tool.poetry.urls]
changelog = "https://github.com/chrisbcarl/bootstrap/blob/main/CHANGELOG.md"
homepage = "https://chriscarl.com"
# documentation = "https://readthedocs.org"
# "bug tracker" = "https://github.com/me/spam/issues"


[tool.poetry.scripts]
# dev = 'chriscarl.tools.dev:main'
# fib = 'chriscarl.tools.fib:main'
# lf = 'chriscarl.tools.lf:main'
# str = 'chriscarl.tools.str:main'


[tool.poetry.dependencies]
jupyterlab = "^4.3.3"
notebook = "^7.3.1"
ipywidgets = "^8.1.5"
ipympl = "^0.9.6"  # FEATURE: ipynb-matplotlib-widgets


[tool.poetry.group.web.dependencies]
flask = "^3.1.0"
selenium = "^4.34.2"
streamlit = "^1.46.1"
requests = "^2.32.4"


[tool.poetry.group.data-science.dependencies]
matplotlib = "^3.10.3"
